package models.fields;

public class Chance extends Field {
    private int number;
}
