package models.fields;

public class Empty extends Field {

}
